fixed resume email alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -256,6 +256,16 @@ div#end-footer {
     border: 1px solid rgba(185, 185, 185, 0.5);
 }
 
+#resume-email {
+    text-align: left;
+}
+
+@media (min-width: 576px) {
+    #resume-email {
+        text-align: right;
+    }
+}
+
 /* BUTTONS */
 .btn-blue {
     border: 1px solid #0984e3;
